--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
+    "qs": "^6.10.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -53,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/qs": "^6.9.7"
   }
 }
