--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.20",
+    "antd": "^4.18.6",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
